force-app/main/default/objects/AccountContactRelation/fields/Bypass_Validation_Rules__c.field-meta.xml
<CustomField>
    <fullName>Bypass_Validation_Rules__c</fullName>
    <description>1. Not integration relevant
2. ZR
3. SF- 1185 Depends on Flow &quot;Contact set Deletion Code Flow&quot; to bypass Validation Rule &quot;No_Deletion_Code_on_Direct_ACR&quot;</description>
    <formula>TRUE =  (Flow_Date__c &gt; NOW() - (5/1440))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bypass Validation Rules</label>
    <type>Checkbox</type>
</CustomField>