force-app/main/default/objects/AccountContactRelation/fields/Contact_Person_ID__c.field-meta.xml
<CustomField>
    <fullName>Contact_Person_ID__c</fullName>
    <description>1. Integration relevant (Grace)
2. ZR
3.</description>
    <formula>Contact.PersonID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Person ID</label>
    <type>Text</type>
</CustomField>