force-app/main/default/objects/AccountContactRelation/fields/External_ID__c.field-meta.xml
<CustomField>
    <fullName>External_ID__c</fullName>
    <description>1. Integration relevant (GRACE)
2. ZR
3. SF-841</description>
    <externalId>true</externalId>
    <label>External ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>