force-app/main/default/objects/AccountContactRelation/fields/Flow_Date__c.field-meta.xml
<CustomField>
    <fullName>Flow_Date__c</fullName>
    <description>1. Not integration relevant
2. ZR
3. SF- 1185 Set via Flow &quot;Contact set Deletion Code Flow&quot; to bypass Validation Rule &quot;No_Deletion_Code_on_Direct_ACR&quot;</description>
    <label>Flow Date</label>
    <type>DateTime</type>
</CustomField>