force-app/main/default/objects/AccountContactRelation/fields/Last_Modified_By_Name__c.field-meta.xml
<CustomField>
    <fullName>Last_Modified_By_Name__c</fullName>
    <description>Used in Flow as condition to check if Platform Events should be triggered or not.</description>
    <formula>LastModifiedBy.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Modified By Name</label>
    <type>Text</type>
</CustomField>