force-app/main/default/objects/AccountContactRelation/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <description>1. Integration relevant (Grace)
2. ZR
3. If the connection is direct, this field will be filled by a flow with the Job Title from a flow. An update on this field will also trigger a flow that updates the Job Title on the Contact.</description>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Contact_Role</valueSetName>
    </valueSet>
</CustomField>