force-app/main/default/objects/AccountContactRelation/validationRules/No_Deletion_Code_on_Direct_ACR.validationRule-meta.xml
<ValidationRule>
    <fullName>No_Deletion_Code_on_Direct_ACR</fullName>
    <active>true</active>
    <description>SF-1185 The Deletion Code on the direct Account Contact Relation should not be set by a User.</description>
    <errorConditionFormula>IsDirect = TRUE
&amp;&amp;
ISCHANGED(Deletion_Code__c)
&amp;&amp;
 Bypass_Validation_Rules__c = FALSE
&amp;&amp;
$Permission.Core_Account_Bypass_Validation_Rules = FALSE</errorConditionFormula>
    <errorMessage>You can not set the deletion code on a direct Account Contact relation. If you would like to set the deletion code for this Contact, do so on the Contact itself.</errorMessage>
</ValidationRule>